# Self-Drivig-Car_Project7_Practice

Project7_Lesson10/trajectoryexercise2-python3/trajectoryexercise2/TrajectoryExercise2/: evaluate_ptg.py  ptg.py
Project7_Lesson7/: Lesson7_Section13.ipynb  Lesson7_Section15.ipynb  Lesson7_Section20.ipynb  Lesson7_Section21.ipynb  Lesson7_Section22.ipynb
Project7_Lesson7/.ipynb_checkpoints/: Lesson7_Section11-checkpoint.ipynb  Lesson7_Section12-checkpoint.ipynb  Lesson7_Section20-checkpoint.ipynb  Lesson7_Section22-checkpoint.ipynb  Lesson7_Session21-checkpoint.ipynb
Project7_Lesson8/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp  test_predict.txt
Project7_Lesson8/PredictionExercise_Python/: prediction.py
Project7_Lesson8/PredictionExercise_Python/my_try/: classifier.py
Project7_Lesson8/debug/: data.txt  result.txt  test_train.txt
Project7_Lesson9/cpp/: cost.cpp  main.cpp  vehicle.cpp
Project7_Lesson9/cpp/debug/: result.txt
Project7_Lesson9/python-3-practice/python_3_practice/: cost_functions.py  result.txt  simulate_behavior.py  vehicle.py  vehicle.py.bak
